<resources>
    <string name="app_name">travel_app</string>
    <string name="web_client_id">43001603312-q78ko11giujmgdn5ide5jof1pec2lm4p.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_login">Login</string>
    <string name="text_create">Create</string>
    <string name="text_create_account">Create account</string>
    <string name="text_name">Name</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm password</string>
    <string name="text_have_account_login">Already have an account?</string>
    <string name="text_no_account_login">Don\'t have an account yet?</string>
    <string name="text_login_now">Login now</string>
    <string name="text_register_now">Register now</string>

    <string name="img_cover_sample">https://images.unsplash.com/photo-1665731372442-a9d2e251af28?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1170&amp;q=80</string>
    <string name="img_avatar_sample">https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=880&amp;q=80</string>
    <string name="img_user_post_img_cover">https://images.unsplash.com/photo-1665501340269-5ced49f91a92?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1074&amp;q=80</string>

    <string name="text_user_name_sample">Rocky Balboa</string>
    <string name="text_user_email_sample">rocky7549@gmail.com</string>
    <string name="text_post">Posts</string>
    <string name="text_posts_count_sample">100</string>
    <string name="text_friends">Friends</string>
    <string name="text_friends_count_sample">62</string>
    <string name="text_your_posts">Your posts</string>
    <string name="text_your_favorite_posts">Your favorite posts</string>
    <string name="text_see_all">See all</string>
    <string name="text_travel_app">Travel app</string>
    <string name="text_profile_settings">Settings</string>
    <string name="update_profile">Update profile</string>
    <string name="text_log_out">Sign out</string>
    <string name="text_update_profile">Profile update</string>
    <string name="text_birthday">Birthday</string>
    <string name="text_address">Address</string>
    <string name="text_phone">Phone number</string>
    <string name="text_save">Save</string>
    <string name="text_loading">Loading</string>
    <string name="text_please_wait">Please wait</string>
    <string name="text_name_place_holder">Please update name</string>
    <string name="text_post_description_holder">Etiam facilisis ligula nec velit posuere egestas. Nunc dictum lectus sem, vel dignissim purus luctus quis. Vestibulum et ligula suscipit, hendre rit erat a, ultricies velit. Praesent convallis in lorem nec blandit. Phasellus a porta tellus. Suspend isse sagittis metus enim.</string>
    <string name="text_comment">Write comment here</string>
    <string name="text_comment_title">Comments</string>
    <string name="text_create_post">Create new post</string>
    <string name="text_post_title">Post title</string>
    <string name="text_post_location">Post location</string>
    <string name="text_liked_title">Likes</string>
</resources>