<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.profile.UpdateProfileFragment">

   <com.example.travel_app.core.views.TravelAppToolBar
       android:id="@+id/tool_bar"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:tool_bar_title="@string/text_update_profile"/>

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="0dp"
       app:layout_constraintTop_toBottomOf="@+id/tool_bar"
       app:layout_constraintBottom_toBottomOf="parent">
      <androidx.constraintlayout.widget.ConstraintLayout
          android:padding="10dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/linear_layout_input_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
             android:orientation="vertical"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="9dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/text_name"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/text_birthday"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/text_phone"
                android:inputType="phone"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/text_address"
                android:textColor="@color/black" />

         </androidx.appcompat.widget.LinearLayoutCompat>

         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_save"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/bg_orange_round_25"
             android:fontFamily="@font/roboto_slab_medium"
             android:textAllCaps="false"
             android:text="@string/text_save"
             app:layout_constraintTop_toBottomOf="@+id/linear_layout_input_field"/>
      </androidx.constraintlayout.widget.ConstraintLayout>
   </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>