<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePostActivity">

    <com.example.travel_app.core.views.TravelAppToolBar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tool_bar_is_visible_button_back="true"
        app:tool_bar_title="@string/text_create_post"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_post_title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/text_post_title"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/roboto_slab_medium"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ln_edit_text_post_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_post_title">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text_post_address"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:hint="@string/text_post_location"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:fontFamily="@font/roboto_slab_medium"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_choose_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/ic_location"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_post_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/text_post_title"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:gravity="top"
        android:fontFamily="@font/roboto_slab_medium"
        app:layout_constraintTop_toBottomOf="@+id/ln_edit_text_post_address"
        app:layout_constraintBottom_toTopOf="@id/btn_create_post"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_post"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/bg_orange_round_25"
        android:text="@string/text_create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_slab_bold"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>